[gd_scene load_steps=7 format=2]

[ext_resource path="res://font/node-font.tres" type="DynamicFont" id=1]
[ext_resource path="res://scene/ChildLine.gd" type="Script" id=2]
[ext_resource path="res://scene/TreeNode.gd" type="Script" id=3]
[ext_resource path="res://texture/node_highlight.png" type="Texture" id=4]
[ext_resource path="res://texture/node_normal.png" type="Texture" id=5]
[ext_resource path="res://texture/node_mask.bmp" type="BitMap" id=6]

[node name="TreeNode" type="Node2D"]
z_index = 4
z_as_relative = false
script = ExtResource( 3 )

[node name="LeftChildLine" type="Node2D" parent="."]
z_as_relative = false
script = ExtResource( 2 )

[node name="RightChildLine" type="Node2D" parent="."]
z_as_relative = false
script = ExtResource( 2 )

[node name="TextureButton" type="TextureButton" parent="."]
self_modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_focused = ExtResource( 5 )
texture_click_mask = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttribClassLabel" type="Label" parent="."]
margin_left = -230.0
margin_top = -8.0
margin_right = 170.0
margin_bottom = 29.0
grow_horizontal = 0
rect_min_size = Vector2( 400, 16 )
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 2
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThreshLabel" type="Label" parent="."]
margin_left = 30.0
margin_top = -8.0
margin_right = 70.0
margin_bottom = 8.0
rect_min_size = Vector2( 300, 16 )
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OperatorLabel" type="Label" parent="."]
margin_left = -12.0
margin_top = -9.0
margin_right = 38.0
margin_bottom = 28.0
rect_min_size = Vector2( 50, 16 )
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
